<resources>
    <string name="app_name">FirebaseExampleProject</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="hello">Welcome %1$s!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="firestore_button">Firestore + RecyclerView</string>
    <string name="storage_and_picture_button">Storage + Picture</string>
    <string name="search_button">Firestore Search</string>
    <string name="firestore_listview">Firestore + ListView</string>
    <string name="plantHeader">Click on the image below to see a new plant</string>
    <string name="plant_image_description">A picture of a %1$s</string>
    <string name="no_plant">No plants to show! Maybe the location of them is incorrect?</string>

    <string name="search_header">If you don\'t see any items below, go to the Firestore Example and add some data.</string>
    <string name="search_hint">search by last name</string>

    <string name="header">Select some values and save the new person to the database.</string>
    <string name="first_name_label">First name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="person_id_label">ID:</string>
    <string name="created_on">Created on %1$s</string>
    <string-array name="first_names">
        <item>Alan</item>
        <item>Tim</item>
        <item>Donald</item>
        <item>Sergey</item>
        <item>Grace</item>
        <item>Ada</item>
    </string-array>
    <string-array name="last_names">
        <item>Turing</item>
        <item>Berners-Lee</item>
        <item>Knuth</item>
        <item>Brin</item>
        <item>Hopper</item>
        <item>Lovelace</item>
    </string-array>
    <string name="add_button_label">Add Person</string>
    <string name="delete_label">Click on a person to delete them.</string>
</resources>
