<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="12dp"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/item_user_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_id_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/item_user_id_label"
            app:layout_constraintTop_toTopOf="@id/item_user_id_label" />

        <TextView
            android:id="@+id/item_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_user_id_label" />

        <TextView
            android:id="@+id/item_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/item_first_name_label"
            app:layout_constraintTop_toTopOf="@id/item_first_name_label"
            />

        <TextView
            android:id="@+id/item_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_first_name_label" />

        <TextView
            android:id="@+id/item_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/item_last_name_label"
            app:layout_constraintTop_toTopOf="@id/item_last_name_label"
            />

        <TextView
            android:id="@+id/item_created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_last_name_label"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

